--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,14 @@ h1 span {
   color: #6d6e71;
 }
 
+.search-container {
+  text-align: center;
+}
+
+.search-input {
+  margin-bottom: 10px;
+}
+
 #idea-list {
   height: 50%;
   /*display: flex;*/
@@ -55,31 +63,10 @@ h1 span {
   overflow: scroll;
 }
 
-.idea-card .button {
-  height: 100px;
-  width: 100px;
-  background-image: url('../images/ideabox-sprite.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 1px solid red;
-}
-
-.delete {
-  background-position: 0px 0px;
-}
-
-.search-container {
-  text-align: center;
-}
-
-.search-input {
-  margin-bottom: 10px;
-}
-
 .idea-card {
   text-align: left;
   width: 85%;
-  border-bottom: 1px dotted red;
+  border-bottom: 1px solid #d1d3d4;
   color: #939598;
   margin: auto;
 }
@@ -96,6 +83,53 @@ h1 span {
   text-overflow: clip;
 }
 
+.idea-head {
+  display: flex;
+  position: relative;
+}
+
 .quality {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  color: #6d6e71;
+}
+
+.quality h3 {
+
+}
+
+.idea-card .button {
+  height: 20px;
+  width: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 5px;
+}
+
+.delete {
+  background-image: url('../images/delete.svg');
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.delete:hover {
+  background-image: url('../images/delete-hover.svg');
+}
+
+.up-vote {
+  background-image: url('../images/upvote.svg');
+}
+
+.up-vote:hover {
+  background-image: url('../images/upvote-hover.svg');
+}
+
+.down-vote {
+  background-image: url('../images/downvote.svg');
+}
+
+.down-vote:hover {
+  background-image: url('../images/downvote-hover.svg');
 }
